--- a/src/index.scss
+++ b/src/index.scss
@@ -6,16 +6,99 @@
   box-sizing: border-box;
 }
 
+* {
+  transition: all .2s ease-in-out;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'San Francisco(SF UI)', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  background-color: var(--background-color);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+ul[class],
+ol[class] {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-default);
+}
+
+:root[data-theme="light"] {
+  --background-color: #ffffff;
+  --header-text: #DC3E22;
+  --text-default: #333
+}
+
+:root[data-theme="dark"] {
+  --background-color: #2a1515;
+  --header-text: #ff0000;
+  --text-default: #ffffff
+}
+
+@font-face {
+  font-family: 'San Francisco(SF UI)';
+  src: local('San Francisco(SF UI) Display Thin');
+  src: local('San-Francisco(SF-UI)-Display-Thin');
+  src: url('./fonts/SFUIDisplay-Thin.woff2') format('woff2');
+  src: url('./fonts/SFUIDisplay-Thin.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'San Francisco(SF UI)';
+  src: local('San Francisco(SF UI) Display Light');
+  src: local('San-Francisco(SF-UI)-Display-Light');
+  src: url('./fonts/SFUIDisplay-Light.woff2') format('woff2');
+  src: url('./fonts/SFUIDisplay-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'San Francisco(SF UI)';
+  src: local('San Francisco(SF UI) Display Regular');
+  src: local('San-Francisco(SF-UI)-Display-Regular');
+  src: url('./fonts/SFUIDisplay-Regular.woff2') format('woff2');
+  src: url('./fonts/SFUIDisplay-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'San Francisco(SF UI)';
+  src: local('San Francisco(SF UI) Display Medium');
+  src: local('San-Francisco(SF-UI)-Display-Medium');
+  src: url('./fonts/SFUIDisplay-Medium.woff2') format('woff2');
+  src: url('./fonts/SFUIDisplay-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'San Francisco(SF UI)';
+  src: local('San Francisco(SF UI) Display Bold');
+  src: local('San-Francisco(SF-UI)-Display-Bold');
+  src: url('./fonts/SFUIDisplay-Bold.woff2') format('woff2');
+  src: url('./fonts/SFUIDisplay-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
 }
