--- a/src/index.scss
+++ b/src/index.scss
@@ -30,10 +30,20 @@ img {
   max-width: 100%;
   display: block;
 }
-ul[class],
-ol[class] {
+
+ul,
+ol {
   list-style: none;
   padding: 0;
+  margin: 0;
+}
+
+button {
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 a {
@@ -44,13 +54,17 @@ a {
 :root[data-theme="light"] {
   --background-color: #ffffff;
   --header-text: #DC3E22;
-  --text-default: #333
+  --header-hover: #B7280F;
+  --text-default: #333;
+  --box-shadow-header: 0px 10px 63px rgba(0, 0, 0, 0.07);
 }
 
 :root[data-theme="dark"] {
   --background-color: #2a1515;
   --header-text: #ff0000;
-  --text-default: #ffffff
+  --header-hover: #B7280F;
+  --text-default: #ffffff;
+  --box-shadow-header: 0px 10px 63px rgba(255, 255, 255, 0.07);
 }
 
 @font-face {
