--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,10 @@ img {
   display: block;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
 ul,
 ol {
   list-style: none;
@@ -56,15 +60,29 @@ a {
   --header-text: #DC3E22;
   --header-hover: #B7280F;
   --text-default: #333;
+  --text-button: #fff;
   --box-shadow-header: 0px 10px 63px rgba(0, 0, 0, 0.07);
+  --background-form: #F4F4F4;
+  --placeholder-text: #999999;
+  --button-green-default-bg: #A8B64F;
+  --button-green-hover-bg: #899441;
+  --button-red-default-bg: #DC3E22;
+  --line-todo: #E4E4E4;
 }
 
 :root[data-theme="dark"] {
-  --background-color: #2a1515;
+  --background-color: #282828;
   --header-text: #ff0000;
   --header-hover: #B7280F;
   --text-default: #ffffff;
+  --text-button: #fff;
   --box-shadow-header: 0px 10px 63px rgba(255, 255, 255, 0.07);
+  --background-form: #5e5e5e;
+  --placeholder-text: #adadad;
+  --button-green-default-bg: #899441;
+  --button-green-hover-bg: #A8B64F;
+  --button-red-default-bg: #DC3E22;
+  --line-todo: #E4E4E4;
 }
 
 @font-face {
