--- a/src/components/MainPage/Todo/TodoForm/todoform.scss
+++ b/src/components/MainPage/Todo/TodoForm/todoform.scss
@@ -16,6 +16,7 @@
       padding: 19px 15px;
       cursor: pointer;
       margin-bottom: 25px;
+      color: var(--text-default);
 
       &:focus-visible,
       &:hover {
@@ -37,13 +38,14 @@
   margin-top: 25px;
   margin-bottom: 20px;
 
-  li:not(:first-child) {
+  li {
+    border-top: 1px solid var(--line-todo);
+  }
+
+  li:last-child {
     border-bottom: 1px solid var(--line-todo);
   }
 
-  li:not(:last-child) {
-    border-top: 1px solid var(--line-todo);
-  }
 }
 
 .todo__time {
