--- a/src/index.scss
+++ b/src/index.scss
@@ -68,6 +68,7 @@ a {
   --button-green-hover-bg: #899441;
   --button-red-default-bg: #DC3E22;
   --line-todo: #E4E4E4;
+  --line-dropdown: #C4C4C4
 }
 
 :root[data-theme="dark"] {
@@ -83,6 +84,7 @@ a {
   --button-green-hover-bg: #A8B64F;
   --button-red-default-bg: #DC3E22;
   --line-todo: #E4E4E4;
+  --line-dropdown: #C4C4C4;
 }
 
 @font-face {
