--- a/src/index.scss
+++ b/src/index.scss
@@ -84,6 +84,7 @@ a {
   --button-green-default-bg: #899441;
   --button-green-hover-bg: #A8B64F;
   --button-red-default-bg: #DC3E22;
+  --button-red-hover-bg: #b0311c;
   --line-todo: #E4E4E4;
   --line-dropdown: #C4C4C4;
   --text-inverse: #000
