--- a/src/components/MainPage/Todo/TodoForm/todoform.scss
+++ b/src/components/MainPage/Todo/TodoForm/todoform.scss
@@ -17,6 +17,7 @@
       cursor: pointer;
       margin-bottom: 25px;
       color: var(--text-default);
+      outline-color: var(--header-text);
 
       &:focus-visible,
       &:hover {
