--- a/src/components/MainPage/Timer/timer.scss
+++ b/src/components/MainPage/Timer/timer.scss
@@ -76,4 +76,10 @@
       }
     }
   }
+
+  &__empty {
+    background-color: var(--background-form);
+    width: 730px;
+    height: 521px;
+  }
 }
