--- a/src/components/MainPage/Todo/TodoForm/TodoTask/todotask.scss
+++ b/src/components/MainPage/Todo/TodoForm/TodoTask/todotask.scss
@@ -5,7 +5,7 @@
     @include flexAlign;
     opacity: 0;
     transform: rotateX(-90deg);
-    transition: all 0.3s cubic-bezier(.36,-0.64,.34,1.76);
+    transition: all 0.3s cubic-bezier(.36, -0.64, .34, 1.76);
     justify-content: space-between;
 
     padding: 15px 0;
@@ -19,6 +19,10 @@
         margin-right: 5px;
         padding: 4px 10px;
         color: var(--text-default);
+        @include flexAlign;
+        height: 25px;
+        width: 25px;
+        justify-content: center;
       }
 
       &--text {
@@ -88,6 +92,6 @@
   .show {
     opacity: 1;
     transform: none;
-    transition: all 0.3s cubic-bezier(.36,-0.64,.34,1.76);
+    transition: all 0.3s cubic-bezier(.36, -0.64, .34, 1.76);
   }
 }
