--- a/src/components/MainPage/Timer/timer.scss
+++ b/src/components/MainPage/Timer/timer.scss
@@ -14,6 +14,7 @@
       font-size: 16px;
       line-height: 17px;
       color: var(--text-inverse);
+      margin-right: 10px;
     }
 
     &--tomato {
@@ -21,6 +22,7 @@
       font-size: 16px;
       line-height: 17px;
       color: var(--text-inverse);
+      white-space: nowrap;
     }
   }
 
@@ -53,7 +55,7 @@
     }
 
     &--task {
-      margin-bottom: 32px;
+      padding: 32px;
       font-weight: 400;
       font-size: 16px;
       line-height: 17px;
