--- a/src/components/MainPage/Todo/TodoForm/todoform.scss
+++ b/src/components/MainPage/Todo/TodoForm/todoform.scss
@@ -6,27 +6,10 @@
     margin-bottom: 25px;
 
     &--input {
+      @include customInput;
       width: 370px;
       display: block;
-      border: none;
-      font-weight: 300;
-      font-size: 16px;
-      line-height: 17px;
-      background-color: var(--background-form);
-      padding: 19px 15px;
-      cursor: pointer;
       margin-bottom: 25px;
-      color: var(--text-default);
-      outline-color: var(--header-text);
-
-      &:focus-visible,
-      &:hover {
-        outline: 1px solid var(--header-text);
-      }
-
-      &::placeholder {
-        color: var(--placeholder-text);
-      }
     }
 
     &--button {
