--- a/src/components/Header/Settings/settings.scss
+++ b/src/components/Header/Settings/settings.scss
@@ -1,6 +1,29 @@
 @import "src/styles/_index.scss";
 
 .modal-settings {
+  &__body {
+    text-align: left;
+
+    &--content {
+      @include flexAlign;
+      margin-bottom: 25px;
+      justify-content: space-between;
+
+      p {
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 17px;
+        color: var(--text-default);
+      }
+
+      input {
+        @include customInput;
+        margin: 10px;
+        width: 100px;
+      }
+    }
+  }
+
   &__footer {
     display: flex;
     flex-direction: column;
