--- a/src/components/MainPage/mainpage.scss
+++ b/src/components/MainPage/mainpage.scss
@@ -3,8 +3,19 @@
 .main {
   @include makeContainer(100px, 80px);
   padding-bottom: 0;
+
   &__container {
     display: flex;
     justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .main {
+    &__container {
+      flex-direction: column-reverse;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
