--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,13 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
 
+p {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 17px;
+  color: var(--text-default);
+}
+
 ul,
 ol {
   list-style: none;
