--- a/src/components/StatsPage/UpperStats/ChartGraphics/ChartsDown/ChartsWeekDay/chartsweekday.scss
+++ b/src/components/StatsPage/UpperStats/ChartGraphics/ChartsDown/ChartsWeekDay/chartsweekday.scss
@@ -11,9 +11,9 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 29px;
-    color: #999;
     text-transform: capitalize;
     transition: color .2s linear;
+    color: var(--placeholder-text);
   }
 
   &--line {
