--- a/src/index.scss
+++ b/src/index.scss
@@ -157,3 +157,18 @@ a {
   font-weight: 700;
   font-style: normal;
 }
+
+.my-node-enter {
+  opacity: 0;
+}
+.my-node-enter-active {
+  opacity: 1;
+  transition: opacity 200ms;
+}
+.my-node-exit {
+  opacity: 1;
+}
+.my-node-exit-active {
+  opacity: 0;
+  transition: opacity 200ms;
+}
